# cicero

./: .gitignore  README.md  db_utils.py  embed.py  history.txt  pyproject.toml  pyvenv.cfg  requirements.txt  schema.surql  server.py  static.py  test.py  test_action.py
flows/: facts_to_truth.ai.yaml  get_relevant_facts.ai.yaml  info_to_facts.ai.yaml  info_to_prompt.ai.yaml  statements_to_facts.ai.yaml  test.ai.yaml  test_action.ai.yaml  test_embed.ai.yaml
frontend/: Readme.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: graphDisplay.jsx  inputForm.jsx  resultDisplay.jsx
