[tool.poetry]
name = "team-apex"
version = "0.1.0"
description = "Team Apex's entry for AI JSON 2024 Summer hackathon"
authors = ["Raphael Darley <raphael@raphaeldarley.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
